# AIppt

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/models/: kb.py  slide.py
app/prompts/: interactive.md  knowledge_point.md  lesson_plan.md  practice.md
app/routers/: download.py  generate.py  kb.py  preview.py  upload.py
app/services/: diagrams.py  generate.py  ingest.py  kb.py  pricing.py  render.py  runs.py
app/templates/: base.html  batch.html  generate.html  home.html  kb.html  preview.html  runs.html  upload.html
fonts/: README.md
samples/: mock_decks.json
samples/lessons/g3t1u3_jiajian/: 01_里程表二.md  manifest.json
samples/lessons/g4t2u3_xiaoshu/: 01_买菜.md  02_比身高.md  03_谁先冲过终点.md  manifest.json
samples/lessons/g5t2u4_changfangti/: 01_长方体的体积.md  manifest.json
samples/lessons/g7t2u1_suitang/: 03_盛唐气象.md  manifest.json
scripts/: dev.ps1  dev.sh  export_png.ps1  fetch_fonts.py  fetch_standards.py  gen_changfangti.py  gen_history_demo.py  gen_real_demo.py  load_demo.py  smoke_real_api.py
static/: style.css
tests/: test_app.py  test_batch.py  test_clarify.py  test_diagrams.py  test_ingest.py  test_kb.py  test_pricing.py  test_render.py  test_runs.py  test_themes.py
tests/fixtures/: sample_deck.json
